# sepomex-db-generator

./: .editorconfig  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  app.py  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci.yml  lint-format.yml  tests.yml
docs/: index.md  nb_guide.md
scripts/: run_checks.sh
src/: extract.py  load.py  main.py  transform.py  utils.py
tests/: conftest.py  test_data_processing.py  test_extract.py  test_load.py  test_transform.py  test_utils.py
